origin-files/deploymentconfig-adelanto-salarial-dev.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: develop
    app.openshift.io/vcs-uri: 'http://gitlab.promnet.com.sv/td/local/backend/adelanto-salario-digital.git'
    openshift.io/generated-by: OpenShiftWebConsole
  resourceVersion: '423339691'
  name: adelanto-salarial-dev
  uid: ae6d4df8-e1b0-4208-80ad-582b24933ae6
  creationTimestamp: '2023-03-31T22:27:26Z'
  generation: 20
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2023-03-31T22:27:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/route-disabled': {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:strategy':
            'f:activeDeadlineSeconds': {}
            'f:rollingParams':
              .: {}
              'f:intervalSeconds': {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
              'f:timeoutSeconds': {}
              'f:updatePeriodSeconds': {}
            'f:type': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"adelanto-salarial-dev"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8778,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2023-03-31T22:28:37Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"adelanto-salarial-dev"}':
                  'f:image': {}
          'f:triggers': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2023-05-17T20:06:01Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:updatedReplicas': {}
          'f:readyReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:details':
            .: {}
            'f:causes': {}
            'f:message': {}
          'f:replicas': {}
          'f:availableReplicas': {}
          'f:observedGeneration': {}
          'f:unavailableReplicas': {}
          'f:latestVersion': {}
      subresource: status
  namespace: adelanto-de-salario-dev
  labels:
    app: adelanto-salarial-dev
    app.kubernetes.io/component: adelanto-salarial-dev
    app.kubernetes.io/instance: adelanto-salarial-dev
    app.kubernetes.io/name: adelanto-salarial-dev
    app.kubernetes.io/part-of: adelanto-salarial-dev
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - adelanto-salarial-dev
        from:
          kind: ImageStreamTag
          namespace: adelanto-de-salario-dev
          name: 'adelanto-salarial-dev:latest'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/adelanto-de-salario-dev/adelanto-salarial-dev@sha256:8a9a5614d28e9f9cb24dd1fde446e53fe35c935b01f19793885f68cc0bb594b4
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: adelanto-salarial-dev
    deploymentconfig: adelanto-salarial-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: adelanto-salarial-dev
        deploymentconfig: adelanto-salarial-dev
    spec:
      containers:
        - name: adelanto-salarial-dev
          image: >-
            image-registry.openshift-image-registry.svc:5000/adelanto-de-salario-dev/adelanto-salarial-dev@sha256:8a9a5614d28e9f9cb24dd1fde446e53fe35c935b01f19793885f68cc0bb594b4
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 20
  details:
    message: image change
    causes:
      - type: ImageChange
        imageTrigger:
          from:
            kind: DockerImage
            name: >-
              image-registry.openshift-image-registry.svc:5000/adelanto-de-salario-dev/adelanto-salarial-dev@sha256:8a9a5614d28e9f9cb24dd1fde446e53fe35c935b01f19793885f68cc0bb594b4
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 19
  updatedReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-04-10T20:26:03Z'
      lastTransitionTime: '2023-04-10T20:26:03Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-05-17T20:06:11Z'
      lastTransitionTime: '2023-05-17T20:06:07Z'
      reason: NewReplicationControllerAvailable
      message: >-
        replication controller "adelanto-salarial-dev-19" successfully rolled
        out
  replicas: 1
  readyReplicas: 1
