origin-files/service-adelanto-salarial-dev.yaml
kind: Service
apiVersion: v1
metadata:
  name: adelanto-salarial-dev
  namespace: adelanto-de-salario-dev
  uid: af7b3c00-8316-49b9-94b2-4c4d85c28bf4
  resourceVersion: '365544313'
  creationTimestamp: '2023-03-31T22:27:26Z'
  labels:
    app: adelanto-salarial-dev
    app.kubernetes.io/component: adelanto-salarial-dev
    app.kubernetes.io/instance: adelanto-salarial-dev
    app.kubernetes.io/name: adelanto-salarial-dev
    app.kubernetes.io/part-of: adelanto-salarial-dev
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  annotations:
    app.openshift.io/vcs-ref: develop
    app.openshift.io/vcs-uri: 'http://gitlab.promnet.com.sv/td/local/backend/adelanto-salario-digital.git'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2023-03-31T22:27:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8778,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.218.37
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.218.37
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: adelanto-salarial-dev
    deploymentconfig: adelanto-salarial-dev
status:
  loadBalancer: {}
