origin-files/route-adelanto-salarial-dev-route-http.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: adelanto-salarial-dev-route-http
  namespace: adelanto-de-salario-dev
  uid: adcc13c4-75a5-412d-a2fb-79701ed6f9fb
  resourceVersion: '377765814'
  creationTimestamp: '2023-04-10T21:55:55Z'
  labels:
    app: adelanto-salarial-dev
    app.kubernetes.io/component: adelanto-salarial-dev
    app.kubernetes.io/instance: adelanto-salarial-dev
    app.kubernetes.io/name: adelanto-salarial-dev
    app.kubernetes.io/part-of: adelanto-salarial-dev
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-04-10T21:55:55Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-04-10T21:55:55Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: adelanto.salarial.dev1.apps.ocp01.promnet.com.sv
  to:
    kind: Service
    name: adelanto-salarial-dev
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: adelanto.salarial.dev1.apps.ocp01.promnet.com.sv
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-04-10T21:55:55Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.ocp01.promnet.com.sv
